src/pages/ar-ae/v1.24.0/sdk/analytics/events.mdx
---
title: "الأحداث"
metaTitle: "حزمة OpenReplay Analytics SDK — الأحداث"
metaDescription: "تعريف وإدارة الخصائص الفائقة لأحداث التحليلات الخاصة بمتعقّب OpenReplay."
---

## الأحداث

تتيح لك هذه الوحدة إدارة **الأحداث** و**الخصائص** — وهي أزواج مفتاح/قيمة دائمة تُرفَق تلقائيًا بكل حدث يتم تتبّعه.

تُخزَّن الخصائص الفائقة محليًا وتُدمَج في حمولة كل حدث عند تتبّع الأحداث.

متاحة عبر:

`tracker.analytics.events`

## المفاهيم

### الخصائص الفائقة

تُخزَّن الخصائص الفائقة في حزمة SDK وتُدمَج في كل حدث ضمن `properties`.

### خصائص الحدث

تُمرَّر خصائص الحدث فقط لاستدعاء واحد لـ `track/sendEvent` و**لا تُحفَظ** كخصائص فائقة.

## المفاتيح المحجوزة

هذه المفاتيح محجوزة ولا يمكن إنشاؤها/إزالتها عبر دوال مساعدة الخصائص الفائقة:

- `properties`
- `token`
- `timestamp`

## التوقيعات عالية المستوى

```ts
// Track an event.
// The `properties` argument is per-event only (not persisted).
tracker.analytics.events.sendEvent(eventName: string, properties?: Record<string, any>, options?: { send_immediately: boolean })

// Create/update super properties (persisted)
tracker.analytics.events.setProperty(name: string, value: any): void
tracker.analytics.events.setProperty(properties: Record<string, any>): void

// Create super properties only if they don't exist yet (persisted)
tracker.analytics.events.setPropertiesOnce(name: string, value: any): void
tracker.analytics.events.setPropertiesOnce(properties: Record<string, any>): void

// Remove super properties (persisted)
tracker.analytics.events.unsetProperties(name: string): void
tracker.analytics.events.unsetProperties(names: string[]): void

// Clear all super properties
tracker.analytics.events.reset(): void
```

## تتبّع الأحداث مع الخصائص

### الخصائص الخاصة بكل حدث (غير دائمة)

```ts
tracker.analytics.events.sendEvent("Button Clicked", {
  button_text: "Start",
  page: "home",
})
```

تنطبق هذه الخصائص على هذا الحدث فقط.

### الخصائص الفائقة + الخصائص الخاصة بكل حدث (مدمجة)

عند تعيين خصائص فائقة، تُضمَّن تلقائيًا في كل حدث ثم تُدمَج مع الخصائص الخاصة بكل حدث:

```ts
tracker.analytics.events.setProperty({
  app_version: "1.42.0",
  env: "prod",
})

tracker.analytics.events.sendEvent("Signup Started", {
	// per-event, can override a super property with the same key
  plan: "pro", 
})
```

ترتيب الدمج:

- تُضاف الخصائص الفائقة أولًا
- تُدمَج الخصائص الخاصة بكل حدث فوقها

لذلك تفوز الخصائص الخاصة بكل حدث عند تعارض المفاتيح.

## setProperty

تُنشئ أو تُعيد كتابة الخصائص الفائقة.

```ts
// object form
tracker.analytics.events.setProperty({
  app_version: "1.42.0",
  region: "eu",
})

// key/value form
tracker.analytics.events.setProperty("build_sha", "3f2c9a1")
```

### ملاحظات:

- يتم تجاهل المفاتيح الافتراضية/الداخلية (التي يتتبّعها SDK) ولن تُضاف كخصائص فائقة.
- تُحفَظ التغييرات محليًا فقط إذا تغيّر شيء بالفعل.

## setPropertiesOnce

تُنشئ خصائص فائقة فقط إذا لم تكن موجودة بعد.

```ts
tracker.analytics.events.setPropertiesOnce({
  first_seen_at: Date.now(),
  signup_source: "docs",
})

// key/value form
tracker.analytics.events.setPropertiesOnce("initial_referrer", document.referrer)
```

### ملاحظات:

- لا تُعيَّن الخصائص إلا إذا كان المفتاح مفقودًا.
- يتم تجاهل المفاتيح المحجوزة (`properties` و`token` و`timestamp`).

## unsetProperties

تُزيل واحدة أو أكثر من الخصائص الفائقة.

```ts
// single
tracker.analytics.events.unsetProperties("region")

// multiple
tracker.analytics.events.unsetProperties(["app_version", "build_sha"])
```

### ملاحظات:

- لا يمكن إزالة المفاتيح المحجوزة.
- الإزالة دائمة.

## reset

تمسح جميع الخصائص الفائقة.

```ts
tracker.analytics.events.reset()
```

## الإرسال الفوري

افتراضيًا، توضع الأحداث في قائمة انتظار/تُجمَّع على دفعات. يمكنك طلب إرسال فوري لحدث:

```ts
tracker.analytics.events.sendEvent(
  "Checkout Completed",
  { value: 199, currency: "EUR" },
  { send_immediately: true },
)
```

## الأسماء المستعارة المتوافقة مع Mixpanel

تدعم جميع الدوال طبقة توافق مُتاحة للتيسير على المستخدمين:

```ts
tracker.analytics.events.register       // setProperty
tracker.analytics.events.register_once  // setPropertiesOnce
tracker.analytics.events.unregister     // unsetProperties
tracker.analytics.events.track          // sendEvent
```


## هل لديك أسئلة؟

إذا واجهت أي مشكلات، انضمّ إلى [Slack](https://slack.openreplay.com) الخاص بنا أو اطّلع على [المنتدى](https://forum.openreplay.com) واحصل على المساعدة من مجتمعنا.
